<?xml version="1.0"?>
<package format="2">
  <name>dart_benchmark</name>
  <version>0.0.1</version>
  <description>Benchmarks for DART.</description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>unreleased</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>aikido</depend>
  <depend>aikido_rviz</depend>
  <depend>boost</depend>
  <depend>dart</depend>
</package>
