<?xml version="1.0"?>
<package format="2">
  <name>mujoco_benchmark</name>
  <version>0.0.1</version>
  <description>Benchmarks for MuJoCo.</description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>unreleased</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake_modules</buildtool_depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>mujoco</depend>
</package>
